[Enhancement #395] Extend SOQL grammar with support for langMatches.